updated height of hero section container to prevent overlap into Projects section below

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 .title h1 {
-    font-family: 'Raleyway', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 3rem;
     margin: 10rem auto 1rem auto;
     margin-left: auto;
@@ -36,7 +36,8 @@ html, body {
 }
 
 .hero_container {
-    margin-bottom: 22rem;
+    width: 100%;
+    height: 100%;
 }
 
 /* Hero section main button styling */
@@ -95,8 +96,7 @@ html, body {
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
+
     display: block;
 }
 
@@ -119,6 +119,12 @@ html, body {
 }
 
 /* Projects section */
+
+#projects_section {
+    background: #fff;
+    position: absolute;
+
+}
 
 .demo_btn {
     background-color: #fa255e;
